# toucan

./: .clang-format  .emscripten  .gitignore  .gn  AUTHORS  BUILD.gn  CMakeLists.txt  CONTRIBUTING.md  DEPS  LICENSE  README.md  TODO  ToucanExecutable.cmake  toucan_executable.gni
api/: BUILD.gn  CMakeLists.txt  api.t  api_android.cc  api_android.h  api_dawn.cc  api_image_codecs.cc  api_internal.h  api_ios.mm  api_mac.mm  api_wasm.cc  api_win.cc  api_x11.cc  init_api.h  init_types.h
ast/: BUILD.gn  CMakeLists.txt  api_validator.cc  api_validator.h  ast.cc  ast.h  constant_folder.cc  constant_folder.h  copy_visitor.cc  copy_visitor.h  dump_as_source_pass.cc  dump_as_source_pass.h  file_location.cc  file_location.h  name_mangler.cc  name_mangler.h  native_class.cc  native_class.h  node_visitor.cc  node_visitor.h  semantic_pass.cc  semantic_pass.h  shader_prep_pass.cc  shader_prep_pass.h  shader_validation_pass.cc  shader_validation_pass.h  symbol.cc  symbol.h  type.cc  type.h  type_replacement_pass.cc  type_replacement_pass.h
bench/: array_float.cc  array_float4.t  array_float4_unroll.t  array_float_unrolled.cc  array_float_unrolled.t  array_vec4f.cc  array_vec4f_unroll.cc  bench_add4f.t  bench_addf.t  bench_exp.t  bench_mat4f.t  bench_mul3f.t  bench_mul4f.t  bench_mul4f_while.t  bench_mulf.t  bench_muli.t  dynamic_array_float.t  dynamic_array_int.t  native1.cc
bindings/: BUILD.gn  CMakeLists.txt  api_header_generator.cc  api_header_generator.h  api_header_generator_main.cc  dump_as_source_pass.cc  dump_as_source_pass.h  gen_bindings.cc  gen_bindings.h  gen_bindings_main.cc
build_overrides/: build.gni  dawn.gni  shaderc.gni  spirv_tools.gni  tint.gni  vulkan_headers.gni  vulkan_tools.gni
codegen/: BUILD.gn  CMakeLists.txt  codegen_llvm.cc  codegen_llvm.h  codegen_spirv.cc  codegen_spirv.h
compilers/: BUILD.gn  CMakeLists.txt  llvm_libs.gni  tc.cc  tj.cc
emscripten/: BUILD.gn  CMakeLists.txt  shell.html
gn/: BUILD.gn  BUILDCONFIG.gn  ar.py  cp.py  rm.py
gn/toolchain/: BUILD.gn
parser/: BUILD.gn  CMakeLists.txt  lexer.h  lexer.ll  parser.h  parser.yy
samples/: BUILD.gn  CMakeLists.txt  android_main.cc  decode.t  disco-dragon.t  gouraud.t  main.cc  mipped-cube.t  rotating-triangle.t  shiny-anim.t  shiny-compute-anim.t  shiny-dragon.t  shiny-translucent.t  shiny.t  skybox.t  springy-3d.t  springy-compute-3d.t  springy-compute.t  springy-higher-r.t  springy-old.t  springy-trampoline.t  springy.t  triangle.t  window.t
samples/include/: cube-loader.t  cube.t  cubic.t  dragon.t  event-handler.t  mesh.t  mipmap-generator.t  quaternion.t  teapot.t  tex-coord-utils.t  transform.t  utils.t
test/: BUILD.gn  CMakeLists.txt  abort-on-slice-fail1.t  abort-on-slice-fail2.t  abort-on-slice-fail3.t  abort-on-strong-null-deref.t  abort-on-weak-null-deref.t  abort-out-of-bounds-array.t  abort-out-of-bounds-heap-array.t  abort-out-of-bounds-matrix.t  abort-out-of-bounds-vector.t  abort.t  addable-qualifiers.t  aggregate-return.t  allocate-in-class-initializer.t  allocate-unsized-array.t  allocate-unsized-class.t  api.t  array-assign.t  array-class.t  array-constant.t  array-float.t  array-float4.t  array-initialization.t  array-length-dynamic.t  array-length-static.t  array-new.t  arrays.t  assert-failed.t  assign-padded-array.t  bind-group.t  binop-widen.t  bitwise.t  bool-constants.t  buffer-double-map.t  buffer-freed-with-mapped-data.t  byte-vector.t  byte.t  cast-classes.t  cast-int-to-float.t  (+264 more)
test/include/: fiveclass.t  include-fiveclass.t  simpleclass.t  string.t  syntax-error.t  test.t
test/interactive/: bind-group.t  blending.t  compute-with-trailing-padding.t  compute.t  gouraud-separate-vertex-buffers-parent-class.t  gouraud-separate-vertex-buffers.t  index-buffer-short.t  index-buffer.t  mipmaps.t  render-to-texture.t  shader-method-call.t  texture1d-load.t  texture1d.t  texture2d-load.t  texture2d.t  texture2darray-load.t  texture2darray.t  texture3d-load.t  texture3d.t  texturecube.t  triangle-vertex-input-parameter.t  triangle-vertex-input-parameter.txt  triangle-with-inherited-vertex-shader.t  triangle-with-vertex-and-fragment-helpers.t  triangle-with-vertex-helper.t  two-color-attachments.t  two-windows.t  uniform-triangle.t  uniform-with-padded-array.t  uniform-with-padded-class.t
tools/: dragon-massager.py  fetch-gn  fetch-win-flex-bison.py  first-dir-entry.py  git-sync-deps  git-sync-deps.bat  make-apk.py  make-app.py  make-ipa.py  run-llvm-config  run.py  toucan.keystore  unixify.py  vswhere.py
utils/: hash_pair.h
