# Copyright 2021 The Toucan Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# These are variables that are overridable by projects that include Dawn.
# The values in this file are the defaults for when we are building from
# Dawn's repository.

# Defaults for these are set again in dawn_overrides_with_defaults.gni so that
# users of Dawn don't have to set dirs if they happen to use the same as Dawn.

dawn_has_build = false

dawn_abseil_dir = "//third_party/abseil-cpp"
dawn_jinja2_dir = "//third_party/jinja2"
dawn_spirv_tools_dir = "//third_party/SPIRV-Tools"
dawn_vulkan_headers_dir = "//third_party/Vulkan-Headers"
dawn_vulkan_tools_dir = "//third_party/Vulkan-Tools"
