# Copyright 2023 The Toucan Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

build_with_chromium = false
tint_has_build = false

tint_spirv_tools_dir = "//third_party/SPIRV-Tools"
tint_spirv_headers_dir = "//third_party/SPIRV-Headers"
tint_build_benchmarks = false
tint_build_unittests = false
tint_root_dir = "//third_party/dawn"
