if (is_win) {
  lib = ".lib"
} else {
  lib = ""
}

llvm_libs = [
  "LLVMWebAssemblyCodeGen${lib}",
  "LLVMWebAssemblyDesc${lib}",
  "LLVMWebAssemblyUtils${lib}",
  "LLVMWebAssemblyInfo${lib}",
  "LLVMX86CodeGen${lib}",
  "LLVMCFGuard${lib}",
  "LLVMGlobalISel${lib}",
  "LLVMX86Desc${lib}",
  "LLVMX86Info${lib}",
  "LLVMMCDisassembler${lib}",
  "LLVMSelectionDAG${lib}",
  "LLVMInstrumentation${lib}",
  "LLVMAsmPrinter${lib}",
  "LLVMMCJIT${lib}",
  "LLVMInterpreter${lib}",
  "LLVMExecutionEngine${lib}",
  "LLVMRuntimeDyld${lib}",
  "LLVMOrcTargetProcess${lib}",
  "LLVMOrcShared${lib}",
  "LLVMCodeGen${lib}",
  "LLVMTarget${lib}",
  "LLVMScalarOpts${lib}",
  "LLVMInstCombine${lib}",
  "LLVMAggressiveInstCombine${lib}",
  "LLVMObjCARCOpts${lib}",
  "LLVMTransformUtils${lib}",
  "LLVMBitWriter${lib}",
  "LLVMAnalysis${lib}",
  "LLVMProfileData${lib}",
  "LLVMSymbolize${lib}",
  "LLVMDebugInfoPDB${lib}",
  "LLVMDebugInfoMSF${lib}",
  "LLVMDebugInfoDWARF${lib}",
  "LLVMObject${lib}",
  "LLVMTextAPI${lib}",
  "LLVMMCParser${lib}",
  "LLVMIRReader${lib}",
  "LLVMAsmParser${lib}",
  "LLVMMC${lib}",
  "LLVMDebugInfoCodeView${lib}",
  "LLVMBitReader${lib}",
  "LLVMCore${lib}",
  "LLVMRemarks${lib}",
  "LLVMBitstreamReader${lib}",
  "LLVMBinaryFormat${lib}",
  "LLVMTargetParser${lib}",
  "LLVMSupport${lib}",
  "LLVMDemangle${lib}",
  "LLVMCodeGenTypes${lib}",
]
