if (is_win) {
  lib = ".lib"
} else {
  lib = ""
}

llvm_libs = [
  "LLVMWebAssemblyCodeGen${lib}",
  "LLVMWebAssemblyUtils${lib}",
  "LLVMWebAssemblyDesc${lib}",
  "LLVMWebAssemblyInfo${lib}",
  "LLVMAArch64CodeGen${lib}",
  "LLVMPasses${lib}",
  "LLVMHipStdPar${lib}",
  "LLVMCoroutines${lib}",
  "LLVMAArch64Desc${lib}",
  "LLVMAArch64Utils${lib}",
  "LLVMAArch64Info${lib}",
  "LLVMARMCodeGen${lib}",
  "LLVMipo${lib}",
  "LLVMVectorize${lib}",
  "LLVMSandboxIR${lib}",
  "LLVMLinker${lib}",
  "LLVMFrontendOpenMP${lib}",
  "LLVMFrontendDirective${lib}",
  "LLVMFrontendAtomic${lib}",
  "LLVMFrontendOffloading${lib}",
  "LLVMObjectYAML${lib}",
  "LLVMARMDesc${lib}",
  "LLVMARMUtils${lib}",
  "LLVMARMInfo${lib}",
  "LLVMX86CodeGen${lib}",
  "LLVMX86Desc${lib}",
  "LLVMX86Info${lib}",
  "LLVMMCDisassembler${lib}",
  "LLVMInstrumentation${lib}",
  "LLVMIRPrinter${lib}",
  "LLVMGlobalISel${lib}",
  "LLVMSelectionDAG${lib}",
  "LLVMCFGuard${lib}",
  "LLVMAsmPrinter${lib}",
  "LLVMMCJIT${lib}",
  "LLVMInterpreter${lib}",
  "LLVMExecutionEngine${lib}",
  "LLVMRuntimeDyld${lib}",
  "LLVMOrcTargetProcess${lib}",
  "LLVMOrcShared${lib}",
  "LLVMCodeGen${lib}",
  "LLVMTarget${lib}",
  "LLVMScalarOpts${lib}",
  "LLVMInstCombine${lib}",
  "LLVMAggressiveInstCombine${lib}",
  "LLVMObjCARCOpts${lib}",
  "LLVMTransformUtils${lib}",
  "LLVMCodeGenTypes${lib}",
  "LLVMCGData${lib}",
  "LLVMBitWriter${lib}",
  "LLVMAnalysis${lib}",
  "LLVMProfileData${lib}",
  "LLVMSymbolize${lib}",
  "LLVMDebugInfoBTF${lib}",
  "LLVMDebugInfoPDB${lib}",
  "LLVMDebugInfoMSF${lib}",
  "LLVMDebugInfoCodeView${lib}",
  "LLVMDebugInfoGSYM${lib}",
  "LLVMDebugInfoDWARF${lib}",
  "LLVMObject${lib}",
  "LLVMTextAPI${lib}",
  "LLVMMCParser${lib}",
  "LLVMIRReader${lib}",
  "LLVMAsmParser${lib}",
  "LLVMMC${lib}",
  "LLVMDebugInfoDWARFLowLevel${lib}",
  "LLVMBitReader${lib}",
  "LLVMFrontendHLSL${lib}",
  "LLVMCore${lib}",
  "LLVMRemarks${lib}",
  "LLVMBitstreamReader${lib}",
  "LLVMBinaryFormat${lib}",
  "LLVMTargetParser${lib}",
  "LLVMSupport${lib}",
  "LLVMDemangle${lib}",
]
